syntax = "proto3";

package proto;

option go_package = "trie";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message CollapsedBn{
    repeated bytes ChildrenHashes = 1 [(gogoproto.nullable) = true];
    bytes ChildrenVersion = 2 [(gogoproto.nullable) = true];
}

message CollapsedEn{
    bytes Key = 1;
    bytes ChildHash = 2;
    uint32 ChildVersion = 3;
}

message CollapsedLn{
    bytes Key = 1;
    bytes Value = 2;
    uint32 Version = 3;
}
